Issue 36: Permission Denied when trying to delete files with recent Samba
git-svn-id: http://greyhole.googlecode.com/svn/trunk@219 b36e06b6-ea79-11de-95aa-47033305a456

--- a/INSTALL
+++ b/INSTALL
@@ -81,6 +81,8 @@ Note: Samba 3.4.3 (and 3.3.9) fix a bug that affects Greyhole functionnality.
 	Change or add the following values in the [global] section:
 
 		unix extensions = no
+		follow symlinks = yes
+		wide links = yes
 
 	For each of your shares, add a 'dfree command' and 'vfs objects' lines, as seen below.
 
