--- a/INSTALL
+++ b/INSTALL
@@ -32,7 +32,8 @@ Note: Samba 3.4.3 (and 3.3.9) fix a bug that affects Greyhole functionnality.
 	install -m 0750 -D -p greyhole-config-update /usr/bin
 	install -m 0644 -D -p logrotate.greyhole /etc/logrotate.d/greyhole
 	install -m 0644 -D -p greyhole.cron.d /etc/cron.d/greyhole
-	if [ -x /usr/lib64/samba/vfs/ ]; then cp samba-module/bin/greyhole-x86_64.so /usr/lib64/samba/vfs/greyhole.so; else cp samba-module/bin/greyhole-i386.so /usr/lib/samba/vfs/greyhole.so; fi
+	# For Samba 3.4 only: #
+		if [ -x /usr/lib64/samba/vfs/ ]; then cp samba-module/bin/greyhole-x86_64.so /usr/lib64/samba/vfs/greyhole.so; else cp samba-module/bin/greyhole-i386.so /usr/lib/samba/vfs/greyhole.so; fi
 	
 	Ubuntu (10+); install the Upstart script:
 		install -m 0644 -D -p upstart.conf /etc/init/greyhole.conf
@@ -55,7 +56,7 @@ Note: Samba 3.4.3 (and 3.3.9) fix a bug that affects Greyhole functionnality.
 	endscript
 }
 
-4. (Optional) Maybe the greyhole.so file packaged with Greyhole wouldn't work on your system. If that is so, you'll need to compile your own VFS module. You'll just need to compile vfs_greyhole.c, and install it.
+4. (For Samba 3.5) The greyhole.so file packaged with Greyhole won't work on your system. You'll need to compile your own VFS module. You'll just need to compile vfs_greyhole.c, and install it.
 
 	Fedora:
 	yumdownloader --source samba
@@ -70,9 +71,15 @@ Note: Samba 3.4.3 (and 3.3.9) fix a bug that affects Greyhole functionnality.
 	cd samba-3.*/source3
 
 	Both (Fedora & Ubuntu):
-	cp ${GREYHOLE_INSTALL_DIR}/samba-module/vfs_greyhole.c modules/
+	# For Samba 3.4: #
+		cp ${GREYHOLE_INSTALL_DIR}/samba-module/vfs_greyhole.c modules/
+	# For Samba 3.5: #
+		cp ${GREYHOLE_INSTALL_DIR}/samba-module/vfs_greyhole-samba-3.5.c modules/vfs_greyhole.c
 	./configure
-	patch -p1 < ${GREYHOLE_INSTALL_DIR}/samba-module/Makefile.patch
+	# For Samba 3.4: #
+		patch -p1 < ${GREYHOLE_INSTALL_DIR}/samba-module/Makefile.patch
+	# For Samba 3.5: #
+		patch -p1 < ${GREYHOLE_INSTALL_DIR}/samba-module/Makefile-samba-3.5.patch
 	make
 	if [ -x /usr/lib64/samba/vfs/ ]; then sudo cp bin/greyhole.so /usr/lib64/samba/vfs/greyhole.so; else sudo cp bin/greyhole.so /usr/lib/samba/vfs/greyhole.so; fi
 
