--- a/INSTALL
+++ b/INSTALL
@@ -35,6 +35,12 @@ Note: Samba 3.4.3 (and 3.3.9) fix a bug that affects Greyhole functionnality.
 	# For Samba 3.4 only: #
 		if [ -x /usr/lib64/samba/vfs/ ]; then cp samba-module/bin/greyhole-x86_64.so /usr/lib64/samba/vfs/greyhole.so; else cp samba-module/bin/greyhole-i386.so /usr/lib/samba/vfs/greyhole.so; fi
 	
+	Note about SVN: If you're running SVN code instead of a packaged version, you'll need to put sql.php and common.php into an 'includes' directory that you'll need to put in PHP's include_path:
+		include_path=`php -i | grep include_path | awk -F':' '{print $NF}'`
+		mkdir "$include_path/includes"
+		install -m 0644 -D -p includes/common.php "$include_path/includes"
+		install -m 0644 -D -p includes/sql.php "$include_path/includes"
+	
 	Ubuntu (10+); install the Upstart script:
 		install -m 0644 -D -p upstart.conf /etc/init/greyhole.conf
 		rm /etc/init.d/greyhole
