Improvement: re-added daily fsck, which will now be in cron.daily, and only run if specific value (num_copies, storage_pool_directories & sticky_files) have changed since the last fsck
git-svn-id: http://greyhole.googlecode.com/svn/trunk@309 b36e06b6-ea79-11de-95aa-47033305a456

--- a/INSTALL
+++ b/INSTALL
@@ -33,6 +33,7 @@ Note: Samba 3.4.3 (and 3.3.9) fix a bug that affects Greyhole functionnality.
 	install -m 0644 -D -p logrotate.greyhole /etc/logrotate.d/greyhole
 	install -m 0644 -D -p greyhole.cron.d /etc/cron.d/greyhole
 	install -m 0755 -D -p greyhole.cron.weekly /etc/cron.weekly/greyhole
+	install -m 0755 -D -p greyhole.cron.daily /etc/cron.daily/greyhole
 	# For Samba 3.4: #
 		if [ -x /usr/lib64/samba/vfs/ ]; then cp samba-module/bin/greyhole-x86_64.so /usr/lib64/samba/vfs/greyhole.so; else cp samba-module/bin/greyhole-i386.so /usr/lib/samba/vfs/greyhole.so; fi
 	# For Samba 3.5: #
