--- a/INSTALL
+++ b/INSTALL
@@ -89,89 +89,19 @@ Note: Samba 3.4.3 (and 3.3.9) fix a bug that affects Greyhole functionnality.
 		cp ${GREYHOLE_INSTALL_DIR}/samba-module/vfs_greyhole.c modules/
 		patch -p1 < ${GREYHOLE_INSTALL_DIR}/samba-module/Makefile.patch
 
-4. Setup Samba:
-
-	Edit /etc/samba/smb.conf
-	Change or add the following values in the [global] section:
-
-		unix extensions = no
-		follow symlinks = yes
-		wide links = yes
-
-	For each of your shares, add a 'dfree command' and 'vfs objects' lines, as seen below.
-
-	Example share definition:
-		[share_name]
-		    path = /path/to/share_name
-		    create mask = 0770
-		    directory mask = 0770
-		    read only = no
-		    available = yes
-		    browseable = yes
-		    writable = yes
-		    guest ok = no
-		    printable = no
-		    dfree command = /usr/bin/greyhole-dfree
-		    vfs objects = greyhole
-
-	Fedora: sudo service smb restart
-	Ubuntu (< 10): sudo /etc/init.d/samba restart
-	Ubuntu (10+): sudo restart smbd
-
-5. Setup the database:
-
-	If using MySQL:
-
-		# Make sure your MySQL server service (mysqld) is running, and runs on boot.
-		Fedora: sudo service mysqld start; sudo chkconfig mysqld on
-		Ubuntu (< 10): sudo /etc/init.d/mysqld start; sudo update-rc.d mysqld defaults
-		Ubuntu (10+): start mysql
-		
-		# Remove the -p parameter if your MySQL root user doesn't require a password for local connections.
-		mysql -u root -p -e "create database greyhole; grant all on greyhole.* to greyhole_user@localhost identified by '89y63jdwe';"
-		mysql -u greyhole_user -p89y63jdwe greyhole < ${GREYHOLE_INSTALL_DIR}/schema-mysql.sql
-
-	If using SQLite:
-
-		sqlite -u /var/cache/greyhole.db < ${GREYHOLE_INSTALL_DIR}/schema-sqlite.sql
-
-6. Cutomize the Greyhole configuration file:
-
-	sudo cp ${GREYHOLE_INSTALL_DIR}/greyhole.example.conf /etc/greyhole.conf
-	
-	Cutomize /etc/greyhole.conf as needed.
-
-7. For each directory you defined as 'storage_pool_directories', execute the following command, to create a hidden file in the root directory of each partition:
-
-	touch <dir>/.greyhole_uses_this
-
-	Example: touch /mnt/hdd0/gh/.greyhole_uses_this
-
-	Those files will be used to differentiate an empty mount from a now-gone mount.
-	i.e. Greyhole will output a warning if this file is not in the root directory where it is about to try to save a file, and it won't use that directory. This will prevent Greyhole from filling the / partition when a partition is unmounted!
-
-8. Add Greyhole to services that start on boot:
+4. Add Greyhole to services that start on boot:
 
 	Fedora: sudo chkconfig --add greyhole; sudo chkconfig greyhole on
 	Ubuntu (< 10): sudo update-rc.d greyhole defaults 98 20
 	Ubuntu (10+): [nothing to do]
 
-9. Work around problems with the CIFS client (as root):
+5. Work around problems with the CIFS client (as root):
     Ref: http://blog.dhampir.no/content/cifs-vfs-no-response-for-cmd-n-mid
 	Note: The cron.d script added above includes an @reboot cron line to make this permanent.
 
 	modprobe cifs
 	echo 0 > /proc/fs/cifs/OplockEnabled
 
-10. Start the Greyhole service:
 
-	Fedora: sudo service greyhole start
-	Ubuntu (< 10): sudo /etc/init.d/greyhole start
-	Ubuntu (10+): sudo start greyhole
-
-
-Check for errors in the Greyhole log file: /var/log/greyhole.log
-
-
-If you use any application that needs to use files on your shares, you'll need to mount the shares locally, and point those applications to those mounts.
-You should not touch the files in your storage pool directories.
+You are now ready to configure and use Greyhole.
+See the USAGE file for details.
